Attempt to Fix font on FireFox

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-body{background-color: #222d32; font-family: monospace;color: #f4f4f4; text-align: center; font-size: 4em;}
+body{background-color: #222d32; font-family:monospace;font-variant: normal;letter-spacing:3px;color: #f4f4f4; text-align: center; font-size: 4em;}
 a{color: #7bc1ca;}
 a:hover{text-decoration: overline;}
 p{font-size: .7em;text-align: left;padding-left: 5%;}
+h1{font-weight: normal;}
+h2{font-weight: normal;}
+h3{font-weight: normal;}
